# floatswitch

./: API.md  CHANGELOG.md  CMakeLists.txt  README.md  REFACTORING_PLAN.md  idf_component.yml
host_test/: CMakeLists.txt  README.md  extra_dirs_common.cmake
host_test/common/: CMakeLists.txt  mock_binary_input.hpp  mock_hal_gpio.hpp  mock_hal_timer.hpp
host_test/test_floatswitch/: CMakeLists.txt
host_test/test_floatswitch/main/: CMakeLists.txt  test_debounced_input.cpp  test_node_state_machine.cpp
include/: debounced_input.hpp  float_switch.hpp  float_switch_logic.hpp  floatswitch_types.hpp  hal_gpio.hpp  hal_timer.hpp
include/interfaces/: i_binary_input.hpp  i_float_switch.hpp  i_fs_hal_gpio.hpp  i_fs_hal_timer.hpp  i_hal_gpio.hpp  i_hal_timer.hpp
src/: debounced_input.cpp  float_switch.cpp  float_switch_logic.cpp  hal_gpio.cpp  hal_timer.cpp
test_apps/test_build/: CMakeLists.txt
test_apps/test_build/main/: CMakeLists.txt  main.cpp
test_apps/test_on_target/: CMakeLists.txt
test_apps/test_on_target/main/: CMakeLists.txt  main.c
